--- a/dev/public/basket-moscow.html
+++ b/dev/public/basket-moscow.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="../css/plugins/magnific-popup.css">
     <link rel="stylesheet" type="text/css" media="screen" href="../css/plugins/datepicker.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="../css/project.css?v=11312">
-    <link rel="stylesheet" type="text/css" media="screen" href="../css/project-ann.css?v=797191">
+    <link rel="stylesheet" type="text/css" media="screen" href="../css/project-main.css?v=797191">
     <link rel="stylesheet" type="text/css" media="screen" href="../css/project.responsive.css?v=724611">
     <link rel="stylesheet" type="text/css" media="screen" href="../css/plugins/simplebar.css">
     <script src="https://api-maps.yandex.ru/2.1/?load=package.standard&amp;lang=ru-RU&amp;apikey=3493f917-bc4d-4df0-aaaf-2d994fa3f731" type="text/javascript"></script>
@@ -46,19 +46,13 @@
           <div class="header-menu">
             <div class="header-menu__left">
               <ul class="header-menu__list">
-                <li class="header-menu__item header-menu__item_catalog"><a class="header-menu__item-catalog catalog-open" href="#"><span>Каталог</span></a></li>
-                <li class="header-menu__item header-menu__item-dropdown catalog-dropdown"><a href="#"><span>Покупателям</span></a></li>
-                <li class="header-menu__item header-menu__item_shops"><span><a href="shops.html">Магазины</a></span></li>
-                <li class="header-menu__item header-menu__item_blog"><span><a href="#">Блог</a></span></li>
-                <li class="header-menu__item header-menu__item_search catalog-search-open only-mobile_header-menu"><a href="#"><span>Поиск</span></a></li>
+                <li class="header-menu__item header-menu__item_catalog"><a class="header-menu__item-catalog catalog-open" href="#"></a></li>
               </ul>
             </div>
             <div class="header-menu__center"><a class="header-logo" href="http://brusnika.ruformat.ru/"><img src="../svg/header_logo.png" alt=""></a></div>
-            <div class="header-menu__right">
+            <div class="header-menu__right" style="min-width: auto;">
               <ul class="header-menu__list">
-                <li class="header-menu__item header-menu__item_search catalog-search-open only-desktop_header-menu"><a href="#"><span>Поиск</span></a></li>
                 <li class="header-menu__item header-menu__item_enter"><a class="header-login-item" href="login.html"><span>Вход</span></a></li>
-                <li class="header-menu__item header-menu__item_favorites"><a class="header-menu__item_favorites" href="favorites.html"><span>Избранное</span></a></li>
                 <li class="header-menu__item header-menu__item_basket"><a class="header-basket-item basket-open" href="#"><img src="../svg/basket.svg"><span class="dot"></span></a></li>
               </ul>
             </div>
@@ -1237,7 +1231,7 @@
                   <div class="mobile-filter-item-heading-title">Размер</div>
                   <div class="mobile-filter-item-heading-toggler"></div>
                 </div>
-                <div class="mobile-filter-item-content"><a class="mobile-filter__link size-open" href="#">Руководство по размерам</a>
+                <div class="mobile-filter-item-content"><a class="link link--black_border size-open" href="#">Как подобрать размер</a>
                   <div class="filter-row filter-row__size">
                     <label class="form-checkbox">
                       <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">One size</span>
