--- a/dev/public/loyalty-card-empty.html
+++ b/dev/public/loyalty-card-empty.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="../css/plugins/magnific-popup.css">
     <link rel="stylesheet" type="text/css" media="screen" href="../css/plugins/datepicker.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="../css/project.css?v=11312">
-    <link rel="stylesheet" type="text/css" media="screen" href="../css/project-ann.css?v=797191">
+    <link rel="stylesheet" type="text/css" media="screen" href="../css/project-main.css?v=797191">
     <link rel="stylesheet" type="text/css" media="screen" href="../css/project.responsive.css?v=724611">
     <link rel="stylesheet" type="text/css" media="screen" href="../css/plugins/simplebar.css">
     <script src="https://api-maps.yandex.ru/2.1/?load=package.standard&amp;lang=ru-RU&amp;apikey=3493f917-bc4d-4df0-aaaf-2d994fa3f731" type="text/javascript"></script>
