--- a/dev/public/index.html
+++ b/dev/public/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="../css/plugins/magnific-popup.css">
     <link rel="stylesheet" type="text/css" media="screen" href="../css/plugins/datepicker.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="../css/project.css?v=11312">
-    <link rel="stylesheet" type="text/css" media="screen" href="../css/project-ann.css?v=797191">
+    <link rel="stylesheet" type="text/css" media="screen" href="../css/project-main.css?v=797191">
     <link rel="stylesheet" type="text/css" media="screen" href="../css/project.responsive.css?v=724611">
     <link rel="stylesheet" type="text/css" media="screen" href="../css/project.responsive-ann.css?v=724611">
     <link rel="stylesheet" type="text/css" media="screen" href="../css/plugins/simplebar.css">
