fix logon and registration forms

--- a/dev/public/registration.html
+++ b/dev/public/registration.html
@@ -542,7 +542,9 @@
               <label class="form-item-label" for="reg_pass2">Новый пароль еще раз</label>
               <input class="form-item form-item--password" id="reg_pass2" type="password" name="reg_pass2" required="" data-validation="{&quot;minlength&quot;: &quot;6&quot;, &quot;equalTo&quot;: &quot;#reg_pass1&quot;, &quot;message&quot;: {&quot;equalTo&quot;: &quot;Пароли не совпадают&quot;, &quot;required&quot;: &quot;&quot;, &quot;minlength&quot;: &quot;Минимальная длина пароля – 6 символов&quot;}}"><span class="password-show"></span>
             </div>
-            <div class="form-row">я не робот</div>
+            <div class="form-row">
+              <div class="form-captcha"><img src="../svg/not_robot.png" width="287"></div>
+            </div>
             <div class="form-row">
               <button class="btn btn--black btn--medium w100 max-w100" type="submit">Зарегистрироваться</button>
               <div class="form-policy">
