--- a/dev/public/login.html
+++ b/dev/public/login.html
@@ -541,7 +541,7 @@
                   </div>
                   <div class="form-row">
                     <label class="form-label" for="reg_pass1">Пароль</label>
-                    <input class="form-item form-item--password" id="reg_pass1" type="password" name="reg_pass1" required="" data-validation="{&quot;minlength&quot;: &quot;6&quot;, &quot;message&quot;: {&quot;required&quot;: &quot;&quot;, &quot;minlength&quot;: &quot;Длина пароля не меньше 6 символов&quot;}}"><span class="password-show"></span>
+                    <input class="form-item form-item--password" id="reg_pass1" type="password" name="reg_pass1" required="" data-validation="{&quot;minlength&quot;: &quot;6&quot;, &quot;message&quot;: {&quot;required&quot;: &quot;&quot;, &quot;minlength&quot;: &quot;Минимальная длина пароля – 6 символов&quot;}}"><span class="password-show"></span>
                   </div>
                   <div class="form-row">
                     <button class="btn btn--black btn--medium w100 max-w100" type="submit">Войти</button>
