--- a/dev/public/order-cancel.html
+++ b/dev/public/order-cancel.html
@@ -268,7 +268,7 @@
           <div class="basket-inner page-inner--w2">
             <div class="basket-open basket-menu__close"></div>
             <div class="basket-menu-sections">
-              <div class="basket-mobile-menu__header"><a class="basket__title-link" href="basket.html">Товары в корзине(1)</a><a class="basket__title-link-clean-basket" href="#">Очистить корзину</a></div>
+              <div class="basket-mobile-menu__header"><a class="basket__title-link" href="basket.html">Товары в корзине<span class="counter-js">(1)</span></a><a class="basket__title-link-clean-basket clean-basket-js" href="#">Очистить корзину</a></div>
               <div class="basket-mobile-menu__body simplebar">
                 <div class="order-table order-table__mr">
                   <div class="order-table__row">
@@ -289,6 +289,11 @@
                     <div class="col-md-2"><a class="order-table-delete" href="#"> </a></div>
                   </div>
                 </div>
+              </div>
+              <div class="message d-none"> 
+                <div class="message__title">КОРЗИНА ПУСТА</div>
+                <div class="message__text">Добавьте товары в корзину, <br>или <a class="link link--black_border" href="login.html">авторизуйтесь</a>,<br>чтобы увидеть выбранные товары.</div>
+                <div class="row justify-content-center"><a class="btn btn--black btn--medium" href="#">ПРОДОЛЖИТЬ ПОКУПКИ</a></div>
               </div>
             </div>
             <div class="basket-mobile-menu__footer">
@@ -515,9 +520,7 @@
           <div class="row">
             <div class="col-md-3 d-none d-lg-block"> 
               <div class="personal-menu">
-                <div class="personal-menu-item"><a class="link link--black active" href="orders.html">Заказы (1)</a>
-                </div>
-                <div class="personal-menu-item"><a class="link link--black" href="history.html">История заказов</a>
+                <div class="personal-menu-item"><a class="link link--black" href="history.html">Заказы (2)</a>
                 </div>
                 <div class="personal-menu-item"><a class="link link--black" href="basket.html">Корзина (2)</a>
                 </div>
