fix history page

--- a/dev/public/history.html
+++ b/dev/public/history.html
@@ -512,9 +512,7 @@
                 <div class="mb-4 d-lg-none"><a class="link link--gray_border" href="dashboard.html">Личный кабинет</a></div>
                 <div class="page-heading-title page-heading-title_personal uppercase">Заказы (2)</div>
               </div>
-              <div class="col-md-8">
-                <div class="page-heading-title1 border-top-gray only-desktop">&nbsp;</div>
-              </div>
+              <div class="col-md-8"></div>
             </div>
           </div>
           <div class="row">
@@ -535,8 +533,8 @@
               </div>
             </div>
             <div class="col-lg-1"></div>
-            <div class="col-12 col-md-8 offset-md-2 col-lg-9 offset-lg-0 col-xl-8">
-              <div class="history">
+            <div class="col-12 col-md-8 offset-md-2 col-lg-9 offset-lg-0 col-xl-8" style="border-top: 1px solid #E1E1E1;">
+              <div class="history position-lg-top-100px">
                 <div class="tabs">
                   <div class="tabs-heading">
                     <div class="tab-heading-item active" data-tab="#current_orders" data-tabs=".orders">Текущие заказы (2)</div>
@@ -545,7 +543,7 @@
                   <div class="tabs-content">
                     <div class="tabs-content-item orders active" id="current_orders"> 
                       <div class="order-items">
-                        <div class="order-item">
+                        <div class="order-item p-0">
                           <div class="order-item-title">Заказ № 21112 от 03.02.2021</div>
                           <div class="order-item-sub-title">
                               Сумма заказа
@@ -556,12 +554,12 @@
                               <div class="order-photo-holder"><img class="cover" src="../dummy/orders/1.jpg"></div>
                               <div class="order-photo-holder"><img class="cover" src="../dummy/orders/2.jpg"></div>
                             </div>
-                            <div class="order-row__btns"> <span><a class="link link--black_border" href="orders.html">Отследить заказ</a></span><a class="btn btn--medium btn--black" href="last-order.html">Подробнее о заказе</a></div>
+                            <div class="order-row__btns"> <span><a class="link link--black_border nowrap" href="orders.html">Отследить заказ</a></span><a class="btn btn--medium btn--black nowrap" href="last-order.html">Подробнее о заказе</a></div>
                           </div>
                         </div>
                       </div>
                       <div class="order-items">
-                        <div class="order-item">
+                        <div class="order-item p-0">
                           <div class="order-item-title">Заказ № 21110 от 04.05.2021</div>
                           <div class="order-item-sub-title">
                               Сумма заказа
@@ -572,14 +570,14 @@
                               <div class="order-photo-holder"><img class="cover" src="../dummy/catalog/c9.jpg"></div>
                               <div class="order-photo-holder"><img class="cover" src="../dummy/catalog-large/c2.png"></div>
                             </div>
-                            <div class="order-row__btns"> <span><a class="link link--black_border" href="orders.html">Отследить заказ</a></span><a class="btn btn--medium btn--black" href="last-order.html">Подробнее о заказе</a></div>
+                            <div class="order-row__btns"> <span><a class="link link--black_border nowrap" href="orders.html">Отследить заказ</a></span><a class="btn btn--medium btn--black nowrap" href="last-order.html">Подробнее о заказе</a></div>
                           </div>
                         </div>
                       </div>
                     </div>
                     <div class="tabs-content-item orders" id="history_orders"> 
                       <div class="order-items">
-                        <div class="order-item">
+                        <div class="order-item p-0">
                           <div class="order-item-title">Заказ № 21112 от 03.02.2021</div>
                           <div class="order-item-sub-title">
                               Сумма заказа
@@ -595,7 +593,7 @@
                         </div>
                       </div>
                       <div class="order-items">
-                        <div class="order-item">
+                        <div class="order-item p-0">
                           <div class="order-item-title">Заказ № 21110 от 04.05.2021</div>
                           <div class="order-item-sub-title">
                               Сумма заказа
