--- a/dev/public/last-order.html
+++ b/dev/public/last-order.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Текущие заказы</title>
+    <title>Заказы (2)</title>
     <meta name="robots" content="index, follow">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Брусника">
@@ -510,17 +510,15 @@
             <div class="row">
               <div class="col-md-4"> 
                 <div class="mb-4 d-lg-none"><a class="link link--gray_border" href="dashboard.html">Личный кабинет</a></div>
-                <div class="page-heading-title page-heading-title_personal uppercase">Текущие заказы</div>
+                <div class="page-heading-title page-heading-title_personal uppercase">Заказы (2)</div>
               </div>
-              <div class="col-md-8">
-                <div class="page-heading-title1 border-top-gray only-desktop">&nbsp;</div>
-              </div>
+              <div class="col-md-8"></div>
             </div>
           </div>
           <div class="row">
             <div class="col-md-3 d-none d-lg-block"> 
               <div class="personal-menu">
-                <div class="personal-menu-item"><a class="link link--black" href="history.html">Заказы (2)</a>
+                <div class="personal-menu-item"><a class="link link--black active" href="history.html">Заказы (2)</a>
                 </div>
                 <div class="personal-menu-item"><a class="link link--black" href="basket.html">Корзина (2)</a>
                 </div>
@@ -536,7 +534,7 @@
             </div>
             <div class="col-lg-1"></div>
             <div class="col-12 col-md-8 offset-md-2 col-lg-9 offset-lg-0 col-xl-8">
-              <div class="order-items">
+              <div class="order-items position-lg-top-100px">
                 <div class="order-item noborder">
                   <div class="mb-5 d-none d-lg-block"><a class="link link--black_border" href="orders.html">Вернуться в текущие заказы</a></div>
                   <div class="order-item-title h2 mb-4">Заказ № 21112 от 03.02.2021, 2 товара на сумму 11 380 Р</div>
@@ -661,6 +659,10 @@
                     <div class="row justify-content-between d-none d-lg-flex">
                       <div class="col-auto"> </div>
                       <div class="col-md-4">
+                        <div class="row mb-2">
+                          <div class="col-md-8 right">Общий вес: </div>
+                          <div class="col-md-4">4, 28 кг</div>
+                        </div>
                         <div class="row mb-2">
                           <div class="col-md-8 right">Стоимость доставки: </div>
                           <div class="col-md-4">0 Р</div>
