--- a/dev/public/orders.html
+++ b/dev/public/orders.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Заказы</title>
+    <title>Заказы (2)</title>
     <meta name="robots" content="index, follow">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Брусника">
@@ -510,7 +510,7 @@
             <div class="row">
               <div class="col-md-4"> 
                 <div class="mb-4 d-lg-none"><a class="link link--gray_border" href="dashboard.html">Личный кабинет</a></div>
-                <div class="page-heading-title page-heading-title_personal uppercase">Заказы</div>
+                <div class="page-heading-title page-heading-title_personal uppercase">Заказы (2)</div>
               </div>
               <div class="col-md-8"></div>
             </div>
@@ -518,7 +518,7 @@
           <div class="row">
             <div class="col-md-3 d-none d-lg-block"> 
               <div class="personal-menu">
-                <div class="personal-menu-item"><a class="link link--black" href="history.html">Заказы (2)</a>
+                <div class="personal-menu-item"><a class="link link--black active" href="history.html">Заказы (2)</a>
                 </div>
                 <div class="personal-menu-item"><a class="link link--black" href="basket.html">Корзина (2)</a>
                 </div>
@@ -534,7 +534,7 @@
             </div>
             <div class="col-lg-1"></div>
             <div class="col-12 col-md-8 offset-md-2 col-lg-9 offset-lg-0 col-xl-8">
-              <div class="order-items order-items__personal">
+              <div class="order-items order-items__personal position-lg-top-100px">
                 <div class="order-item noborder">
                   <div class="order-item-title">Заказ № 21112 от 03.02.2021</div>
                   <div class="order-item-info row mb-3">
@@ -660,7 +660,7 @@
                   </div>
                 </div>
               </div>
-              <div class="order-items order-items__personal">
+              <div class="order-items order-items__personal position-lg-top-100px">
                 <div class="order-item noborder">
                   <div class="order-item-title">Заказ № 21112 от 03.02.2021</div>
                   <div class="order-item-info row mb-3">
