--- a/dev/public/basket.html
+++ b/dev/public/basket.html
@@ -503,13 +503,13 @@
           <div class="basket__page-header">
             <div class="row align-items-end justify-content-between">
               <div class="col-md-6">
-                <div class="d-md-none mb-3"><a class="link link--black" href="#">Вернуться в корзину</a></div>
+                <div class="d-md-none mb-3"><a class="link link--black" href="#">Назад к покупкам</a></div>
                 <div class="basket-form__title">Оформление заказа</div>
                 <div class="basket-form__text">   Обработка заказов ежедневно
                   <nobr>09:00 — 21:00</nobr>
                 </div>
               </div>
-              <div class="col-auto d-none d-md-block"><span> <a class="link link--black" href="#">Вернуться в корзину</a></span></div>
+              <div class="col-auto d-none d-md-block"><span> <a class="link link--black" href="#">Назад к покупкам</a></span></div>
             </div>
           </div>
           <form class="form basket__body" novalidate="novalidate">
@@ -1406,7 +1406,7 @@
           </div>
           <div class="form-row">
             <label class="form-item-label" for="f3">E-mail</label>
-            <input class="form-item form-item--text" id="f3" type="email" name="f3" required="" data-validation="{&quot;message&quot;: &quot;Укажите корретный адрес почты&quot;}" value="petrov@gmail.com">
+            <input class="form-item form-item--text" id="f3" type="email" name="f3" required="" data-validation="{&quot;message&quot;: &quot;Укажите корректный адрес почты&quot;}" value="petrov@gmail.com">
           </div>
           <div class="form-row">
             <label class="form-item-label" for="f4">Телефон</label>
@@ -1528,7 +1528,7 @@
         </div>
         <div class="form-row">
           <label class="form-item-label" for="f3">E-mail</label>
-          <input class="form-item form-item--text" id="f3" type="email" name="f3" required="" data-validation="{&quot;message&quot;: &quot;Укажите корретный адрес почты&quot;}" value="petrov@gmail.com">
+          <input class="form-item form-item--text" id="f3" type="email" name="f3" required="" data-validation="{&quot;message&quot;: &quot;Укажите корректный адрес почты&quot;}" value="petrov@gmail.com">
         </div>
         <div class="form-row form-row--checkbox">
           <input class="form-item form-item--checkbox catalog-item-checkbox" id="saile" type="checkbox" checked="checked">
@@ -1552,7 +1552,7 @@
       <div class="page-popup-inner">
         <div class="page-popup-title">Вы подписаны</div>
         <div class="page-popup-title--small">
-           Мы напишем вам на почту, когда эта вещь поступит в продажу</div><a class="btn btn--black btn--medium max-w100 w100" href="#">Продолжить</a>
+           Мы напишем вам на почту, когда эта вещь поступит в продажу</div><a class="btn btn--black btn--medium max-w100 w100 close-popup" href="#">Продолжить</a>
       </div>
     </div>
     <script type="text/javascript" src="../../js/jquery-3.4.1.min.js"></script>
