--- a/dev/public/successful-bid.html
+++ b/dev/public/successful-bid.html
@@ -657,7 +657,7 @@
                     <form class="form" novalidate="novalidate">
                       <div class="footer-form__form">
                         <div class="form-row">
-                          <input type="email" name="f3" required="" data-validation="{&quot;message&quot;: &quot;Укажите корретный адрес почты&quot;}" value="petrov@gmail.com">
+                          <input type="email" name="f3" required="" data-validation="{&quot;message&quot;: &quot;Укажите корректный адрес почты&quot;}" value="petrov@gmail.com">
                         </div>
                         <button class="btn btn--white" type="submit" href="#message-you-subscribed" data-popup="{&quot;type&quot;:&quot;inline&quot;}">ok</button>
                       </div>
@@ -1317,7 +1317,7 @@
           </div>
           <div class="form-row">
             <label class="form-item-label" for="f3">E-mail</label>
-            <input class="form-item form-item--text" id="f3" type="email" name="f3" required="" data-validation="{&quot;message&quot;: &quot;Укажите корретный адрес почты&quot;}" value="petrov@gmail.com">
+            <input class="form-item form-item--text" id="f3" type="email" name="f3" required="" data-validation="{&quot;message&quot;: &quot;Укажите корректный адрес почты&quot;}" value="petrov@gmail.com">
           </div>
           <div class="form-row">
             <label class="form-item-label" for="f4">Телефон</label>
@@ -1439,7 +1439,7 @@
         </div>
         <div class="form-row">
           <label class="form-item-label" for="f3">E-mail</label>
-          <input class="form-item form-item--text" id="f3" type="email" name="f3" required="" data-validation="{&quot;message&quot;: &quot;Укажите корретный адрес почты&quot;}" value="petrov@gmail.com">
+          <input class="form-item form-item--text" id="f3" type="email" name="f3" required="" data-validation="{&quot;message&quot;: &quot;Укажите корректный адрес почты&quot;}" value="petrov@gmail.com">
         </div>
         <div class="form-row form-row--checkbox">
           <input class="form-item form-item--checkbox catalog-item-checkbox" id="saile" type="checkbox" checked="checked">
@@ -1463,7 +1463,7 @@
       <div class="page-popup-inner">
         <div class="page-popup-title">Вы подписаны</div>
         <div class="page-popup-title--small">
-           Мы напишем вам на почту, когда эта вещь поступит в продажу</div><a class="btn btn--black btn--medium max-w100 w100" href="#">Продолжить</a>
+           Мы напишем вам на почту, когда эта вещь поступит в продажу</div><a class="btn btn--black btn--medium max-w100 w100 close-popup" href="#">Продолжить</a>
       </div>
     </div>
     <script type="text/javascript" src="../../js/jquery-3.4.1.min.js"></script>
