fix personal page

--- a/dev/public/dashboard.html
+++ b/dev/public/dashboard.html
@@ -504,7 +504,7 @@
           </div>
         </div>
       </header>
-      <main class="page-content page-content--personal-area"> 
+      <main class="page-content page-content--personal-area page-content--personal-area--dashboard"> 
         <div class="page-inner page-inner--w2">
           <div class="personal-grid">
             <div class="personal-grid-block-one"> 
