--- a/dev/public/login.html
+++ b/dev/public/login.html
@@ -504,8 +504,8 @@
           </div>
         </div>
       </header>
-      <main>
-        <div class="page-popup page-popup_login" id="auth-form">
+      <main class="page-content">
+        <div class="page-popup" id="auth-form">
           <div class="page-popup-title">ВХОД</div>
           <form class="form">
             <div class="tabs form-tabs">
