--- a/dev/public/personal.html
+++ b/dev/public/personal.html
@@ -512,9 +512,7 @@
                 <div class="d-lg-none"><a class="link link--gray_border" href="dashboard.html">Личный кабинет</a></div>
                 <div class="page-heading-title page-heading-title_personal uppercase">Личные данные</div>
               </div>
-              <div class="col-md-8">
-                <div class="page-heading-title1 border-top-gray only-desktop">&nbsp;</div>
-              </div>
+              <div class="col-md-8"></div>
             </div>
           </div>
           <div class="row row-test">
@@ -575,7 +573,6 @@
                 </div>
               </form>
             </div>
-            <div class="col-12 col-md-3 col-xl-4"><a class="link link--black_border" href="loyalty-card.html">Есть карта лояльности?</a></div>
           </div>
         </div>
       </main>
