--- a/dev/public/last-order.html
+++ b/dev/public/last-order.html
@@ -558,8 +558,8 @@
                   </div>
                   <div class="d-none d-lg-block">
                     <div class="row justify-content-between align-items-center mb-5">
-                      <div class="col-auto"><a class="link link--black_border" href="order-cancel.html">Отменить заказ</a></div>
-                      <div class="col-auto"><a class="btn btn--medium btn--black" href="#">ПОВТОРИТЬ ЗАКАЗ</a></div>
+                      <div class="col-auto"><a class="link link--black_border" href="#">Отследить заказ</a></div>
+                      <div class="col-md-3"><a class="btn btn--medium btn--black" href="#">ПОВТОРИТЬ ЗАКАЗ</a></div>
                     </div>
                   </div>
                   <div class="d-lg-none">
@@ -612,20 +612,21 @@
                     <div class="h2 mb-3 d-lg-none">Товары в заказе</div>
                     <div class="row">
                       <div class="col-4 col-lg-6">
-                        <div class="row">
-                          <div class="col-12 col-lg-3">
+                        <div class="order-table__item">
+                          <div class="order-table__img">
                             <div class="order-photo-holder"><img class="cover" src="../dummy/orders/1.jpg"></div>
                           </div>
-                          <div class="col-9 d-none d-lg-block">
-                            <p><b>Бутсы Nike Vapor 13 Pro FG AT7901-414</b></p>
-                            <p>Размер: 41 RU</p>
+                          <div class="order-table__info d-none d-lg-block">
+                            <div class="order-table__name">Брюки</div>
+                            <div class="order-table__size">Размер: S</div>
+                            <div class="order-table__color">Цвет: КОРИЧНЕВЫЙ</div>
                           </div>
                         </div>
                       </div>
                       <div class="col-8 col-lg-6">
                         <div class="row">
                           <div class="col-12 d-lg-none">
-                            <p>Бутсы Nike Vapor 13 Pro FG AT7901-414</p><b class="mr-10">8 990 Р</b>1 шт.
+                            <p>Брюки</p><b class="mr-10">8 990 Р</b>1 шт.
                           </div>
                           <div class="col-lg-3 d-none d-lg-block">8 990 Р</div>
                           <div class="col-lg-6 d-none d-lg-block">1</div>
@@ -635,20 +636,21 @@
                     </div>
                     <div class="row">
                       <div class="col-4 col-lg-6">
-                        <div class="row">
-                          <div class="col-12 col-lg-3">
+                        <div class="order-table__item">
+                          <div class="order-table__img">
                             <div class="order-photo-holder"><img class="cover" src="../dummy/orders/2.jpg"></div>
                           </div>
-                          <div class="col-9 d-none d-lg-block">
-                            <p><b>Мяч футбольный Select Diamond</b></p>
-                            <p>Размер: 5</p>
+                          <div class="order-table__info d-none d-lg-block">
+                            <div class="order-table__name">Жакет</div>
+                            <div class="order-table__size">Размер:5</div>
+                            <div class="order-table__color">Цвет: КОРИЧНЕВЫЙ</div>
                           </div>
                         </div>
                       </div>
                       <div class="col-8 col-lg-6">
                         <div class="row">
                           <div class="col-12 d-lg-none">
-                            <p>Мяч футбольный Select Diamond</p><b class="mr-10">2 390 Р</b>1 шт.
+                            <p>Жакет</p><b class="mr-10">2 390 Р</b>1 шт.
                           </div>
                           <div class="col-lg-3 d-none d-lg-block">2 390 Р</div>
                           <div class="col-lg-6 d-none d-lg-block">1</div>
@@ -657,7 +659,7 @@
                       </div>
                     </div>
                     <div class="row justify-content-between d-none d-lg-flex">
-                      <div class="col-auto"> </div>
+                      <div class="col-auto"> <a class="link link--black_border" href="order-cancel.html">Отменить заказ</a></div>
                       <div class="col-md-4">
                         <div class="row mb-2">
                           <div class="col-md-8 right">Общий вес: </div>
