--- a/dev/public/order-cancel.html
+++ b/dev/public/order-cancel.html
@@ -510,7 +510,7 @@
             <div class="row">
               <div class="col-md-4"> 
                 <div class="mb-4 d-lg-none"><a class="link link--gray_border" href="dashboard.html">Личный кабинет</a></div>
-                <div class="page-heading-title page-heading-title_personal uppercase">отмена заказа</div>
+                <div class="page-heading-title page-heading-title_personal uppercase">Заказы (2)</div>
               </div>
               <div class="col-md-8">
                 <div class="page-heading-title1 border-top-gray only-desktop">&nbsp;</div>
@@ -520,7 +520,7 @@
           <div class="row">
             <div class="col-md-3 d-none d-lg-block"> 
               <div class="personal-menu">
-                <div class="personal-menu-item"><a class="link link--black" href="history.html">Заказы (2)</a>
+                <div class="personal-menu-item"><a class="link link--black active" href="history.html">Заказы (2)</a>
                 </div>
                 <div class="personal-menu-item"><a class="link link--black" href="basket.html">Корзина (2)</a>
                 </div>
